[package]
name = "one_hundred_days_of_code"
version = "0.1.0"
authors = ["Caleb <CalebOttoGameDev@Gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.59"
clap = "2.33.0"
specs = "0.14"
specs-derive = "0.4"

[dependencies.sdl2]
version = "0.32.1"
default-features = false
features = ["image"]
